--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Kordle">
-
+        <activity
+            android:name=".ui.view.dialog.StatisticsDialog"
+            android:theme="@style/Theme.MyDialog"
+            android:exported="false" />
+        <activity
+            android:name=".ui.view.dialog.SetDialog"
+            android:exported="false"
+            android:theme="@style/Theme.MyDialog" />
+        <activity
+            android:name=".ui.view.dialog.ExplanationDialog"
+            android:exported="false"
+            android:theme="@style/Theme.MyDialog" />
         <activity
             android:name=".ui.view.MainActivity"
-            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
