--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,15 +4,18 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@drawable/free_icon_korean"
+        android:label="한글 워들"
+        android:roundIcon="@drawable/free_icon_korean"
         android:supportsRtl="true"
         android:theme="@style/Theme.Kordle">
         <activity
+            android:name=".ui.view.MainActivity"
+            android:exported="true"/>
+        <activity
             android:name=".ui.view.dialog.StatisticsDialog"
-            android:theme="@style/Theme.MyDialog"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.MyDialog" />
         <activity
             android:name=".ui.view.dialog.SetDialog"
             android:exported="false"
@@ -22,9 +25,10 @@
             android:exported="false"
             android:theme="@style/Theme.MyDialog" />
         <activity
-            android:name=".ui.view.MainActivity"
+
+            android:name=".ui.view.SplashActivity"
             android:exported="true"
-            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar">
+           >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
