--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/free_icon_korean"
-        android:label="한글 워들"
-        android:roundIcon="@drawable/free_icon_korean"
+        android:icon="@drawable/korea"
+        android:label="훈들"
+        android:roundIcon="@drawable/korea"
         android:supportsRtl="true"
         android:theme="@style/Theme.Kordle">
         <activity
