chore: build 오류 해결

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,10 +1,9 @@
+pluginManagement {
+    repositories { google(); mavenCentral(); gradlePluginPortal() }
+}
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
-    repositories {
-        google()
-        mavenCentral()
-        jcenter() // Warning: this repository is going to shut down soon
-    }
+    repositories { google(); mavenCentral() }
 }
 rootProject.name = "Kordle"
-include ':app'
+include(":app")
